# svnsearch

./: .gitignore  BUILD-NATIVE.md  BUILD.md  LICENSE  Makefile  README.md  app.py  build-native-macos.sh  build-native.bat  build.bat  build.gradle  config.py  demo.html  index.html  index_service.py  models.py  package-lock.json  package.json  package.sh  pom.xml  preview.html  requirements.txt  run.bat  run.sh  start.py  svn_client.py  svnsearch.spec  vite.config.js
.continue/agents/: new-config.yaml
.cursor/rules/: my-rule.mdc
.github/workflows/: build-all.yml  build-native.yml  build.yml  macos-build.yml  windows-build.yml
data/: index.db
desktop/: package.json  vite.config.js
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: autostart.rs  commands.rs  database.rs  index_engine.rs  main.rs  svn_client.rs  tray.rs
docs/: plan-search-result-fields.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  database.rs  index_engine.rs  main.rs  pinyin.rs  search_query.rs  svn_client.rs  tray.rs
src/main/java/com/svnsearch/: SvnSearchApplication.java
src/main/java/com/svnsearch/config/: AppConfig.java  BrowserLauncher.java
src/main/java/com/svnsearch/controller/: ApiController.java  StaticController.java
src/main/java/com/svnsearch/model/: FileIndex.java  Repository.java
src/main/java/com/svnsearch/repository/: FileIndexRepository.java  RepositoryRepository.java
src/main/java/com/svnsearch/service/: IndexService.java  SvnClient.java
static/: index.html
