[package]
name = "svnsearch-desktop"
version = "1.0.0"
edition = "2021"
# 关闭 Cargo 自动发现二进制（否则会同时生成 package 名的 exe）
autobins = false

# 只生成一个 exe，名称与 productName 一致，避免 target/release 下出现 svnsearch-desktop.exe 和 SVNSearch.exe 两份
[[bin]]
name = "SVNSearch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
dirs = "5.0"
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
